--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.10.0"
 rand = "0.8.5"
+spade = "2.2.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
